--- a/index.html
+++ b/index.html
@@ -33,10 +33,25 @@
       </ol>
       <hr>
       <h4>contact information </h4>
-      <a href="file:///C:/Users/hassz/OneDrive/Desktop/w/contact.html
+        <h3>how to contact me</h3>
+  <ul>
+    <li>with my email</li>
+    <li>with my number</li>
+  </ul>
+<<form class=""action="mailto:hasszia2018@gmail.="method="post" encypte="text/plain">
+</form>
+    <label>Your name:</label>
+    <input type="text" name="" value="">
+    <input type="submit" name=""><br>
+    <br>
+     <label>your email</label>
+    <input type=email name= value><br>
+    <br>
+    <br>
 
-
-  ">how to contact me</a>
+    <label>message</label><br>
+    <textarea name="name" rows="10" cols="30"></textarea>
+    <input type="submit" name="">
 <hr>
       <h3>work experience </h3>
           <table border="2">
